fix: hero vertical alignment and mobile logos

--- a/assets/styles/components/_HeroHeadlineHome.scss
+++ b/assets/styles/components/_HeroHeadlineHome.scss
@@ -143,21 +143,6 @@
 			justify-content: flex-start;
 			align-items: center;
 
-			//scroll down button base
-			&:first-child {
-
-				&,
-				> .elementor-column-wrap,
-				> .elementor-column-wrap > .elementor-widget-wrap {
-					height: 100%;
-				}
-
-				> .elementor-column-wrap > .elementor-widget-wrap {
-					position: relative;
-					padding-bottom: 6.5em !important;
-				}
-			}
-
 			.heroHeadline__title .elementor-heading-title {
 				text-align: left;
 			}
@@ -265,32 +250,6 @@
 
 	}
 
-	&--scroll {
-		position: absolute;
-		bottom: 0;
-		left: 0;
-
-		a {
-			position: relative;
-			display: block;
-			width: 1em;
-			height: 5.75em;
-			animation: down 2.5s infinite;
-
-			&::before {
-				content: "";
-				position: absolute;
-				top: 0;
-				right: 0;
-				bottom: 0;
-				left: 0;
-				display: block;
-				background: url(../images/scroll_down.svg) center center no-repeat;
-				background-size: contain;
-			}
-		}
-	}
-
 	&--usedby.elementor-widget {
 		margin-bottom: 1em;
 
@@ -304,8 +263,12 @@
 	}
 
 	.Clients {
-		justify-content: flex-start;
+		justify-content: center;
 		margin: 0;
+
+		@media (min-width: $breakpoint-tablet) {
+			justify-content: flex-start;
+		}
 
 		&__item {
 			margin: 0 !important;
@@ -761,5 +724,59 @@
 			}
 		}
 
+	}
+
+	&.heroHeadline--scroll & {
+
+		&--info.elementor-column {
+
+			@media (min-width: $breakpoint-tablet) {
+
+				&:first-child {
+					position: relative;
+					height: 100%;
+
+					> .elementor-column-wrap,
+					> .elementor-column-wrap > .elementor-widget-wrap {
+						position: initial;
+					}
+
+					> .elementor-column-wrap > .elementor-widget-wrap {
+						padding-bottom: 6.5em !important;
+					}
+				}
+			}
+		}
+	}
+
+	.heroHeadline--scroll-btn {
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		display: none;
+
+		@media (min-width: $breakpoint-tablet) {
+			display: block;
+		}
+
+		a {
+			position: relative;
+			display: block;
+			width: 1em;
+			height: 5.75em;
+			animation: down 2.5s infinite;
+
+			&::before {
+				content: "";
+				position: absolute;
+				top: 0;
+				right: 0;
+				bottom: 0;
+				left: 0;
+				display: block;
+				background: url(../images/scroll_down.svg) center center no-repeat;
+				background-size: contain;
+			}
+		}
 	}
 }
